Some changes :  - corrected few errors in the database  - added some missing methods  - slept because it is important  - implemented a beginning of the platform step